fix mat-error overlap

--- a/src/app/manager-dashboard/manager-settings.shared.scss
+++ b/src/app/manager-dashboard/manager-settings.shared.scss
@@ -13,8 +13,9 @@
   margin: 0 auto;
 }
 
-mat-list-item {
+mat-list-item.mat-mdc-list-item {
   overflow: visible;
+  height: auto;
 }
 
 .list-item-content {
